@startuml PostgreSQL ERD - Project Management
!theme plain
skinparam backgroundColor #FFFFFF
skinparam linetype ortho

title PostgreSQL Entity Relationship Diagram - Project Management Module

' Reference to User (from User Management module)
entity "User" as user {
  * id : UUID <<PK>>
  --
  * username : VARCHAR(50)
  * email : VARCHAR(100)
  ...
}

entity "Project" as project {
  * id : UUID <<PK>>
  * owner_id : UUID <<FK>>
  --
  * name : VARCHAR(200)
  * github_url : VARCHAR(500) <<UNIQUE>>
  * repository_id : VARCHAR(100)
  * default_branch : VARCHAR(100)
  webhook_secret : VARCHAR(255)
  * is_active : BOOLEAN
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  last_analyzed : TIMESTAMP
}

entity "ProjectMember" as member {
  * id : UUID <<PK>>
  * project_id : UUID <<FK>>
  * user_id : UUID <<FK>>
  --
  * role : ENUM(owner, maintainer, contributor, viewer)
  * joined_at : TIMESTAMP
}

entity "AnalysisConfig" as config {
  * id : UUID <<PK>>
  * project_id : UUID <<FK>>
  --
  enabled_rules : JSON
  severity_thresholds : JSON
  compliance_standards : JSON
  llm_model : VARCHAR(50)
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

' Relationships
user ||--o{ project : "owns"
user ||--o{ member : "participates in"
project ||--o{ member : "has members"
project ||--|| config : "configured by"

note right of project
  GitHub repository integration
  - Unique GitHub URL
  - Webhook configuration
  - Active/inactive status
  - Last analysis timestamp
end note

note right of member
  Team collaboration
  - Role-based permissions
  - Owner: Full control
  - Maintainer: Manage settings
  - Contributor: Submit code
  - Viewer: Read-only access
end note

note right of config
  Project-specific settings
  - Enabled analysis rules
  - Severity thresholds
  - Compliance standards (ISO/IEC)
  - LLM model selection
end note

@enduml
